kubernetes/platform/cilium-policies/base/allow-gateway-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-gateway-frontend
spec:
  description: "Allow LAN clients to reach the Cilium ingress/gateway endpoint and let it forward to backends"
  endpointSelector:
    matchLabels:
      "reserved:ingress": ""
  ingress:
    - fromCIDR:
        - 10.0.5.0/24
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: opencloud
            app: opencloud
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egress:
    - toEntities:
        - cluster
    - toCIDR:
        - 10.0.3.0/24
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "9000"
              protocol: TCP
            - port: "9001"
              protocol: TCP
